added mouseover highlighting

--- a/tictac.html
+++ b/tictac.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="tictac.scss"/>
+    <script
+src="http://code.jquery.com/jquery-3.1.1.min.js"
+integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+crossorigin="anonymous"></script>
+    <script type="text/javascript" src="tictac.js"></script>
     <title>Tic Tac Toe - by Anthony Survant</title>
   </head>
   <body>
-    <div class="rawr">
 
-      <div class="top-container">
-        <div class="left-col">
+      <article class="top-container">
+        <section class="left-col">
           <div class="tl" id="tile">
             tl
           </div>
@@ -19,8 +23,8 @@
           <div class="bl" id="tile">
             bl
           </div>
-        </div>
-        <div class="mid-col">
+        </section>
+        <section class="mid-col">
           <div class="tm" id="tile">
             tm
           </div>
@@ -30,8 +34,8 @@
           <div class="bm" id="tile">
             bm
           </div>
-        </div>
-        <div class="right-col">
+        </section>
+        <section class="right-col">
           <div class="tr" id="tile">
             tr
           </div>
@@ -41,8 +45,7 @@
           <div class="br" id="tile">
             br
           </div>
-        </div>
-      </div>
-    </div>
+        </section>
+      </article>
   </body>
 </html>
