--- a/tictac.html
+++ b/tictac.html
@@ -7,43 +7,46 @@
 src="http://code.jquery.com/jquery-3.1.1.min.js"
 integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Titillium+Web" rel="stylesheet">
     <script type="text/javascript" src="tictac.js"></script>
     <title>Tic Tac Toe - by Anthony Survant</title>
   </head>
   <body>
-
+    <header>
+      <h1>Tic-Tac-Toe</h1>
+    </header>
       <article class="top-container">
         <section class="left-col">
           <div class="tl" id="tile">
-            tl
+
           </div>
           <div class="ml" id="tile">
-            ml
+
           </div>
           <div class="bl" id="tile">
-            bl
+
           </div>
         </section>
         <section class="mid-col">
           <div class="tm" id="tile">
-            tm
+
           </div>
           <div class="mm" id="tile">
-            mm
+
           </div>
           <div class="bm" id="tile">
-            bm
+
           </div>
         </section>
         <section class="right-col">
           <div class="tr" id="tile">
-            tr
+
           </div>
           <div class="mr" id="tile">
-            mr
+
           </div>
           <div class="br" id="tile">
-            br
+            
           </div>
         </section>
       </article>
