removed double piece placement within a tile

--- a/tictac.html
+++ b/tictac.html
@@ -14,6 +14,7 @@ crossorigin="anonymous"></script>
   <body>
     <header>
       <h1>Tic-Tac-Toe</h1>
+      <h2 class="whose-move"></h2>
     </header>
       <article class="top-container">
         <section class="left-col">
@@ -46,7 +47,7 @@ crossorigin="anonymous"></script>
 
           </div>
           <div class="br" id="tile">
-            
+
           </div>
         </section>
       </article>
