fixed win condition bug and added credits

--- a/tictac.html
+++ b/tictac.html
@@ -51,5 +51,10 @@ crossorigin="anonymous"></script>
           </div>
         </section>
       </article>
+
+      <footer>
+        <h3>created by Anthony Survant</h3>
+        <h4>check out www.anthonysurvant.com for more</h4>
+      </footer>
   </body>
 </html>
