found a way to break everything with a reset button

--- a/tictac.html
+++ b/tictac.html
@@ -15,46 +15,48 @@ crossorigin="anonymous"></script>
     <header>
       <h1>Tic-Tac-Toe</h1>
       <h2 class="whose-move"></h2>
+      <div class="reset">
+        
+      </div>
     </header>
-      <article class="top-container">
-        <section class="left-col">
-          <div class="tl" id="tile">
+    <article class="top-container">
+      <section class="left-col">
+        <div id="tl" class="tile">
 
-          </div>
-          <div class="ml" id="tile">
+        </div>
+        <div id="ml" class="tile">
 
-          </div>
-          <div class="bl" id="tile">
+        </div>
+        <div id="bl" class="tile">
 
-          </div>
-        </section>
-        <section class="mid-col">
-          <div class="tm" id="tile">
+        </div>
+      </section>
+      <section class="mclass-col">
+        <div id="tm" class="tile">
 
-          </div>
-          <div class="mm" id="tile">
+        </div>
+        <div id="mm" class="tile">
 
-          </div>
-          <div class="bm" id="tile">
+        </div>
+        <div id="bm" class="tile">
 
-          </div>
-        </section>
-        <section class="right-col">
-          <div class="tr" id="tile">
+        </div>
+      </section>
+      <section class="right-col">
+        <div id="tr" class="tile">
 
-          </div>
-          <div class="mr" id="tile">
+        </div>
+        <div id="mr" class="tile">
 
-          </div>
-          <div class="br" id="tile">
+        </div>
+        <div id="br" class="tile">
 
-          </div>
-        </section>
-      </article>
-
-      <footer>
-        <h3>created by Anthony Survant</h3>
-        <h4>check out www.anthonysurvant.com for more</h4>
-      </footer>
+        </div>
+      </section>
+    </article>
+    <footer>
+      <h3>created by Anthony Survant</h3>
+      <h4>check out www.anthonysurvant.com for more</h4>
+    </footer>
   </body>
 </html>
