--- a/tictac.html
+++ b/tictac.html
@@ -12,50 +12,54 @@ crossorigin="anonymous"></script>
     <title>Tic Tac Toe - by Anthony Survant</title>
   </head>
   <body>
-    <header>
-      <h1>Tic-Tac-Toe</h1>
-      <h2 class="whose-move"></h2>
-      <h2 class="reset"></h2>
-    </header>
-      <article class="top-container">
-        <section class="left-col">
-          <div id="tl" class="tile">
 
-          </div>
-          <div id="ml" class="tile">
+      <div class="all">
+        <header>
+          <h1>Tic-Tac-Toe</h1>
+          <h2 class="whose-move"></h2>
+          <h2 class="reset"></h2>
+        </header>
 
-          </div>
-          <div id="bl" class="tile">
+        <article class="top-container">
+          <section class="left-col">
+            <div id="tl" class="tile">
 
-          </div>
-        </section>
-        <section class="mid-col">
-          <div id="tm" class="tile">
+            </div>
+            <div id="ml" class="tile">
 
-          </div>
-          <div id="mm" class="tile">
+            </div>
+            <div id="bl" class="tile">
 
-          </div>
-          <div id="bm" class="tile">
+            </div>
+          </section>
+          <section class="mid-col">
+            <div id="tm" class="tile">
 
-          </div>
-        </section>
-        <section class="right-col">
-          <div id="tr" class="tile">
+            </div>
+            <div id="mm" class="tile">
 
-          </div>
-          <div id="mr" class="tile">
+            </div>
+            <div id="bm" class="tile">
 
-          </div>
-          <div id="br" class="tile">
+            </div>
+          </section>
+          <section class="right-col">
+            <div id="tr" class="tile">
 
-          </div>
-        </section>
-      </article>
+            </div>
+            <div id="mr" class="tile">
 
-      <footer>
-        <h3>created by Anthony Survant</h3>
-        <h4>check out www.anthonysurvant.com for more</h4>
-      </footer>
+            </div>
+            <div id="br" class="tile">
+
+            </div>
+          </section>
+        </article>
+
+        <footer>
+          <h3>created by Anthony Survant</h3>
+          <h4>check out www.anthonysurvant.com for more</h4>
+        </footer>
+      </div>
   </body>
 </html>
